# protocol

./: .flake8  .gitignore  .travis.yml  API.html  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  usage.html
.github/: ISSUE_TEMPLATE.md
.github/workflows/: continuous-integration.yml
_sources/: index.rst.txt  installation.rst.txt  usage.rst.txt
docs/: API.rst  Makefile  compile_docs.sh  conf.py  index.rst  make.bat  usage.rst
protocol/: __init__.py  base.py  config.py  imaging.py  logger.py  sequence.py  utils.py
protocol/tests/: conftest.py  test_base_protocol.py  test_base_sequence.py  test_bidsimaging_sequence.py  test_imaging.py  test_protocol.py  test_sequence.py  utils.py
protocol/tests/data/: sample.json
protocol/tests/resources/: sample.json
tests/: test_protocol.py
